# TUSUR

./: .flake8  README.md  my_tests.py  pyproject.toml
.github/workflows/: check.yml  my.yaml
fastlab/: __init__.py  fastlab.py
fastlab/static/: styles.css
fastlab/templates/: forms.html  image.html  some.html  transform.html
liblab/: database.db  database.py  main.py  models.py  schemas.py  services.py
