[tool.poetry]
name = "tusur"
version = "0.1.0"
description = ""
authors = ["Valery Shcherbakov <val032606@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
flake8 = "^7.0.0"
pytest = "^8.0.0"
jinja2 = "^3.1.3"
numpy = "^1.26.4"
pillow = "^10.2.0"
python-multipart = "^0.0.7"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
