[tool.poetry]
name = "tusur"
version = "0.1.0"
description = ""
authors = ["Valery Shcherbakov <val032606@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
flake8 = "^7.0.0"
pytest = "^8.0.0"
jinja2 = "^3.1.3"
numpy = "^1.26.4"
pillow = "^10.2.0"
python-multipart = "^0.0.7"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
lines_after_imports = 2